# fw-nrfconnect-nrf

samples/openthread/coprocessor/: CMakeLists.txt  README.rst  overlay-usb.conf  prj-rcp_minimal.conf
samples/openthread/coprocessor/src/: main.c
